<resources>
    <!-- General -->
    <string name="app_name">G1_Admin</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- FormFragment-->
    <string name="title_fragment">Upload Form</string>
    <string-array name="categories">
        <item>Pizza</item>
        <item>Drink</item>
        <item>Appetizer</item>
    </string-array>
    <string name="btnChangeImage">Change</string>
    <string name="select_category">Select category:</string>
    <string name="name_dish">Name of the dish:</string>
    <string name="name_dish_hint">Name</string>
    <string name="txt_description">Description:</string>
    <string name="txt_description_hint">Description</string>
    <string name="price_category">Price:</string>
    <string name="price_icon">ic_euro</string>
    <string name="add_btn">Add</string>
    <string name="alert_title">Do you want to add it definitively?</string>
    <string name="alert_missage">It cannot be reversed!</string>
    <string name="toast_added">Added the category</string>
    <string name="menu_Open">Open</string>
    <string name="menu_Close">Close</string>
    <string name="alert_logout_title">Do you want to logout?</string>
    <string name="alert_logout_message">Auto-login will be deactivated</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wrong_email_password">Wrong Email or Password</string>
    <string name="logged_success">Logged in Successfully</string>
    <string name="not_admin">User is not admin</string>
    <string name="no_default_image">You need to change the default image</string>
    <string name="operation_cancelled">Operation cancelled</string>
    <string name="cat_image_required">Category image is required</string>
    <string name="cat_name_required">Category name is required</string>
    <string name="success_uploaded">Successfully Uploaded</string>
    <string name="failed_upload">Failed to upload</string>
    <string name="changed_status">Changed the status of this order</string>
    <string name="fullname_required">Fullname is required!</string>
    <string name="email_required">Email is required!</string>
    <string name="provide_valid_email">Please provide valid email!</string>
    <string name="password_required">Password is required!</string>
    <string name="min_password">Min password length should be 6 characters!</string>
    <string name="registered_success">User has been registered succesfully!</string>
    <string name="failed_register">Failed to register! Try again!</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="remember">Remember me</string>
    <string name="admin_panel">Administrator Panel</string>
    <string name="login">Login</string>
    <string name="upload_cat">Upload Category</string>
    <string name="upload_image">Upload image</string>
    <string name="add_cat">Add category</string>
    <string name="cat_name">Category name</string>
    <string name="order_id">Order ID:</string>
    <string name="user_name">User Name:</string>
    <string name="order_name">Order Name:</string>
    <string name="status_2">Status:</string>
    <string name="change_status">Change status</string>
    <string name="register_user">Register user</string>
    <string name="fullname">Fullname</string>
    <string name="register">Register</string>
    <string name="user_created">User Created</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="user">User</string>
    <string name="date">Date:</string>
    <string name="status">Status</string>
    <string name="main">Main</string>
    <string name="home">Home</string>
    <string name="insert_forms">Insert Forms</string>
    <string name="dish">Dish</string>
    <string name="cat">Category</string>
    <string name="user_orders">User Orders</string>
    <string name="view_orders">View Orders</string>
    <string name="auth">Authentication</string>
    <string name="new_user">New user</string>
    <string name="logout">Log Out</string>


    <!-- View Order Spinner -->
    <string-array name="state">
        <item>Received</item>
        <item>In process</item>
        <item>Sent</item>
    </string-array>
</resources>