<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Fragment.CategoryFormFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleCategoryFormFragment"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginTop="30dp"
            android:gravity="center|left"
            android:text="@string/upload_cat"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/categoryImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:rotation="90"
            tools:src="@drawable/pizza_generic" />

        <Button
            android:id="@+id/btnSetCategoryImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upload_image" />

        <EditText
            android:id="@+id/categoryFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/cat_name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_cat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>