<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Fragment.FormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/titleFormFragment"
                android:layout_width="195dp"
                android:layout_height="66dp"
                android:gravity="center"
                android:text="@string/title_fragment"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/dishImage"
                android:rotation="90"
                android:layout_width="200dp"
                android:layout_height="200dp"
                tools:src="@drawable/pizza_generic" />

            <Button
                android:id="@+id/btnChangeImage"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btnChangeImage" />

            <TextView
                android:id="@+id/selectCategorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="200dp"
                android:layout_height="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txtNameCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_dish"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNameCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtPriceCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_category"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_euro"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_btn" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>