<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageButton
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtDetailID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_id"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtDetailIDBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtUserNameBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtOrderDateBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerDetailOrder"
            android:layout_width="230dp"
            android:layout_height="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/changeStateButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/change_status" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>